--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-<h1>testing!!!!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Creating Text Content with HTML</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+   <div class="headline"><h1>The 3,000m-high border that's melting away</h1>
+    <p class="date">14 December 2024</p>
+    <p class="Autor">Sophie Hardach</p>
+</div>
+      
+      <img
+        src="p0kb5bvx.jpg"
+        alt="Bella Vista refuge by the Italian-Austrian border in winter (Credit: Paul Grüner)"
+      />
+
+      <div class="centerd">
+      <p class="description">
+        The "Schöne Aussicht – Bella Vista" refuge by the Italian-Austrian
+        border in winter (Credit: Paul Grüner)
+      </p>
+      <p class="maindetails">
+        Changes that begin in the ice at the tops of high mountain ranges are
+        cascading down to lower altitudes. As the world warms, they are changing
+        borders, livelihoods and the shapes of mountains along the way.
+      </p>
+      <p>
+        It is a sunny day in autumn, and I am walking up a rocky slope next to a
+        glacier at around 3,000m (9,800ft) above sea level, on the border
+        between Austria and Italy. Next to me is Paul Grüner, the owner of a
+        mountain refuge on the Italian side, which overlooks the glacier. Two
+        brown ibexes – a type of wild mountain goat – graze peacefully by a
+        turquoise glacial lake, their long, curved horns peeking out between the
+        rocks. At our feet, a southern slope leads down into Italy, and on the
+        other side, a northern slope faces Austria. Nearby, a weather-beaten
+        wooden signpost with an arrow reads "Grenze / Confine" – meaning
+        "border", in German and Italian, both of which are spoken in this
+        multilingual area.
+      </p>
+      <p>
+        Grüner, who has been running the refuge since the 1980s, has invited me
+        up here to show me how much the glacier, called
+        <em
+          ><a href="https://deims.org/86e3a1ca-b2ba-4b06-b096-71447df52841"
+            >Hochjochferner
+          </a></em
+        >has dwindled due to global warming. One startling consequence: its
+        meltwater, which used to flow into both Austria to the north and Italy
+        to the south, now just flows into one country, Austria. That's because
+        the southern part of the
+        <em
+          ><a href="https://tc.copernicus.org/articles/15/3699/2021/"
+            >glacier</a
+          ></em
+        >
+        has retreated much more dramatically than the northern part, and is now
+        gone, those familiar with the glacier say. It's just one example of how
+        profoundly climate change is
+        <em
+          ><a href="https://climate.copernicus.eu/alpine-glaciers"
+            >reshaping</a
+          ></em
+        >
+        the mountains – with far-reaching consequences for everything from
+        border relations, to hazards such as rockfall, to Europe's
+        <em
+          ><a
+            href="https://www.sciencedirect.com/science/article/pii/S2468312420300146"
+            >water supply</a
+          ></em
+        >.
+      </p>
+      <p>
+        <i
+          >"When I was a child, the glacier covered this entire ridge, and the
+          meltwater on that side flowed down to Italy,"</i
+        >
+        says Grüner, who grew up in the area, gesturing at the south-facing
+        slope. That slope is now rocky and bare.
+        <i>"And now it flows down here, and into Austria,"</i> he adds, and
+        gestures at the slope below our feet, which points down towards that
+        country.
+      </p>
+      <h2>Adapting a border</h2>
+      <blockquote>"Here in the Alps, one of the most striking consequences of glacier loss
+        is the difference in meltwater. For example, when the water suddenly
+        goes down the 'wrong' side of a mountain, and is then missing on the
+        other side," says Andrea Fischer, a glaciologist and vice-director of
+        the Institute of Interdisciplinary Mountain Research at the Austrian
+        Academy of Sciences. That's what happened with the Hochjochferner, she
+        says. "Because of the glacier's retreat, the meltwater no longer flows
+        down to the south, and instead, flows to the north, to Austria."</blockquote>
+     
+    </div>
+  </body>
+</html>
